--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/UserManager/GetAllUser.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/UserManager/GetAllUser.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<HN120_ShopQuanAo.Data.Models.User>
 
 @{
-    ViewData["Title"] = "GetAllAccount";
+    ViewData["Title"] = "GetAllUser";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 
 }
@@ -42,16 +42,6 @@
 
 <!-- Form hoặc nút lọc -->
 <div class="filter-form">
-    <form asp-action="FilterByRole" method="get">
-        <label>Select Role:</label>
-        <select name="roleName">
-            <option value="Admin">Admin</option>
-            <option value="User">User</option>
-            <option value="Employee">Employee</option>
-            <!-- Thêm các vai trò khác nếu cần -->
-        </select>
-        <button type="submit">Filter</button>
-    </form>
     <a class="add-account-btn btn btn-primary" asp-controller="UserManager" asp-action="CreateAnAccount">+ Thêm mới tài khoản</a>
 </div>
 
@@ -62,30 +52,25 @@
 
             </th>
             <th>
-                UserName
-            </th>
-            <th>
-                FullName
+                Họ Tên
             </th>
             <th>
                 Email
             </th>
             <th>
-                PhoneNumber
+                Số điện thoại
             </th>
             <th>
-                Gender
+                Giới tính
             </th>
             <th>
-                Birthday
+                Sinh nhật
             </th>
             <th>
-
-                Status
+                Trạng thái
             </th>
             <th>
-
-                Action
+                Hành Động
             </th>
         </tr>
     </thead>
@@ -106,12 +91,7 @@
                     }
                 </td>
                 <td>
-                    @items.UserName
-                </td>
-                <td>
-
                     @items.FullName
-
                 </td>
                 <td>
                     @items.Email
@@ -142,7 +122,7 @@
 
                 </td>
                 <td>
-                    @items.Birthday
+                    @(items.Birthday.HasValue ? items.Birthday.Value.ToString("dd/MM/yyyy") : "N/A")
                 </td>
                 <td>
 
