--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetHoaDonByMa.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetHoaDonByMa.cshtml
@@ -746,7 +746,7 @@
                     </div>
                     <div class="col-md-12 text-center">
                         <label for="clear"></label>
-                        <button type="text" class="form-control w-50 d-grid gap-2 col-6 mx-auto" name="clear" id="clear">Reset địa chỉ</button>
+                        <button type="text" class="form-control w-50 d-grid gap-2 col-6 mx-auto" name="clear" id="clear">Chọn lại địa chỉ</button>
                     </div>
                     
                     <div class="col-md-10">
@@ -871,6 +871,7 @@
 </div>
 
 <div style="display:none">
+    <input id="btn_TongGiaTriHangHoa_fake" />
     <input id="btn_ma_fake" />
     <input id="btn_UserID_fake" />
     <input id="btn_MaVoucher_fake" />
@@ -879,7 +880,6 @@
     <input id="btn_TenKhachHang_fake" />
     <input id="btn_SoDienThoai_fake" />
     <input id="btn_PhiShip_fake" />
-    <input id="btn_TongGiaTriHangHoa_fake" />
     <input id="btn_PhuongTTT_fake" />
     <input id="btn_Status_fake" />
     <input id="btn_phanloai_fake" />
