--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/HoaDonTaiQuayPartialView.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/HoaDonTaiQuayPartialView.cshtml
@@ -109,7 +109,7 @@
                             }
                             @if (item.PhuongThucThanhToan == 3)
                             {
-                                <p>Thập cẩm</p>
+                                <p>Chuyển khoản + tiền mặt</p>
                             }
                             @if (item.PhuongThucThanhToan == 4)
                             {
